--- a/Rewrite the rules/start/style.css
+++ b/Rewrite the rules/start/style.css
@@ -1,10 +1,18 @@
+:root{
+    --bColor1 : #011212;
+    --width : 100px;
+    --height : 100px;
+    --bColor2 : #ff8800;
+    --bRadius : 50px;
+}
+
 body {
-    background-color: #011212;
+    background-color: var(--bColor1);
 }
 
 .ball {
-    width: 100px;
-    height: 100px;
-    background-color: #ff8800;
-    border-radius: 50px;
+    width: var(--width);
+    height: var(--height);
+    background-color: var(--bColor2);
+    border-radius: var(--bRadius);
 }
