--- a/sass_exercise_4-selectors_extend/style.scss
+++ b/sass_exercise_4-selectors_extend/style.scss
@@ -23,6 +23,7 @@ div {
     border: f.rem-calc(1) solid module.$color-primary;
     width: 20vw;
     margin-left: 38vw;
+    text-decoration: none;
     
     
   }
